# prata_cpp

./: CMakeLists.txt
chapter2/: CMakeLists.txt  exercise2.1.cpp  exercise2.2.cpp  exercise2.3.cpp  exercise2.4.cpp  exercise2.5.cpp  exercise2.6.cpp  exercise2.7.cpp  listing2.1.cpp  listing2.2.cpp  listing2.3.cpp  listing2.4.cpp  listing2.5.cpp  listing2.6.cpp
chapter3/: 3.1.cpp  3.2.cpp  3.5.cpp  3.7.cpp  CMakeLists.txt  exercise3.2.cpp  exercise3.3.cpp  exercise3.4.cpp  exercise3.5.cpp  exercise3.6.cpp  listing3.1.cpp  listing3.10.cpp  listing3.11.cpp  listing3.12.cpp  listing3.13.cpp  listing3.14.cpp  listing3.2.cpp  listing3.3.cpp  listing3.4.cpp  listing3.5.cpp  listing3.6.cpp  listing3.7.cpp  listing3.8.cpp  listing3.9.cpp
chapter4/: CMakeLists.txt  exercise4.1.cpp  exercise4.10.cpp  exercise4.2.cpp  exercise4.3.cpp  exercise4.4.cpp  exercise4.5.cpp  exercise4.6.cpp  exercise4.7.cpp  exercise4.8.cpp  exercise4.9.cpp  listing4.1.cpp  listing4.10.cpp  listing4.11.cpp  listing4.12.cpp  listing4.13.cpp  listing4.14.cpp  listing4.15.cpp  listing4.16.cpp  listing4.17.cpp  listing4.18.cpp  listing4.19.cpp  listing4.2.cpp  listing4.20.cpp  listing4.21.cpp  listing4.22.cpp  listing4.23.cpp  listing4.24.cpp  listing4.3.cpp  listing4.4.cpp  listing4.5.cpp  listing4.6.cpp  listing4.7.cpp  listing4.8.cpp  listing4.9.cpp
chapter5/: CMakeLists.txt  exercise5.1.cpp  exercise5.10.cpp  exercise5.2.cpp  exercise5.3.cpp  exercise5.4.cpp  exercise5.5.cpp  exercise5.6.cpp  exercise5.7.cpp  exercise5.7vector.cpp  exercise5.8.cpp  exercise5.9.cpp  listing5.1.cpp  listing5.10.cpp  listing5.11.cpp  listing5.12.cpp  listing5.13.cpp  listing5.14.cpp  listing5.15.cpp  listing5.16.cpp  listing5.17.cpp  listing5.18.cpp  listing5.19.cpp  listing5.2.cpp  listing5.20.cpp  listing5.3.cpp  listing5.4.cpp  listing5.5.cpp  listing5.6.cpp  listing5.7.cpp  listing5.8.cpp  listing5.9.cpp
chapter6/: CMakeLists.txt  exercise6.1.cpp  exercise6.2.cpp  exercise6.7.cpp  listing6.1.cpp  listing6.10.cpp  listing6.11.cpp  listing6.12.cpp  listing6.13.cpp  listing6.14.cpp  listing6.15.cpp  listing6.16.cpp  listing6.2.cpp  listing6.3.cpp  listing6.4.cpp  listing6.5.cpp  listing6.6.cpp  listing6.7.cpp  listing6.8.cpp  listing6.9.cpp  q6.2.cpp  q6.3.cpp  q6.8.cpp
