cmake_minimum_required(VERSION 3.22)
project(prata_cpp)

set(CMAKE_CXX_STANDARD 11)

#add_executable(listing2.1 chapter2/listing2.1.cpp)
#add_executable(listing2.2 chapter2/listing2.2.cpp)
#add_executable(listing2.3 chapter2/listing2.3.cpp)
#add_executable(listing2.4 chapter2/listing2.4.cpp)
#add_executable(listing2.5 chapter2/listing2.5.cpp)
#add_executable(listing2.6 chapter2/listing2.6.cpp)
#add_executable(exercise2.1 chapter2/exercise2.1.cpp)
#add_executable(exercise2.2 chapter2/exercise2.2.cpp)
#add_executable(exercise2.3 chapter2/exercise2.3.cpp)
#add_executable(exercise2.4 chapter2/exercise2.4.cpp)
#add_executable(exercise2.5 chapter2/exercise2.5.cpp)
#add_executable(exercise2.6 chapter2/exercise2.6.cpp)
#add_executable(exercise2.7 chapter2/exercise2.7.cpp)
#add_executable(listing3.1 chapter3/listing3.1.cpp)
#add_executable(listing3.2 chapter3/listing3.2.cpp)
#add_executable(listing3.3 chapter3/listing3.3.cpp)
#add_executable(listing3.4 chapter3/listing3.4.cpp)
#add_executable(listing3.5 chapter3/listing3.5.cpp)
#add_executable(listing3.6 chapter3/listing3.6.cpp)
#add_executable(listing3.7 chapter3/listing3.7.cpp)
#add_executable(listing3.8 chapter3/listing3.8.cpp)
#add_executable(listing3.9 chapter3/listing3.9.cpp)
#add_executable(listing3.10 chapter3/listing3.10.cpp)
#add_executable(listing3.11 chapter3/listing3.11.cpp)
#add_executable(listing3.12 chapter3/listing3.12.cpp)
#add_executable(listing3.13 chapter3/listing3.13.cpp)
#add_executable(listing3.14 chapter3/listing3.14.cpp)
add_executable(3.1 chapter3/3.1.cpp)
add_executable(3.2 chapter3/3.2.cpp)
add_executable(3.3 chapter3/3.3.cpp)
add_executable(3.4 chapter3/3.4.cpp)
add_executable(3.5 chapter3/3.5.cpp)
add_executable(3.6 chapter3/3.6.cpp)
add_executable(3.7 chapter3/3.7.cpp)
#add_executable(listing4.1 chapter4/listing4.1.cpp)
#add_executable(listing4.2 chapter4/listing4.2.cpp)
#add_executable(listing4.3 chapter4/listing4.3.cpp)
#add_executable(listing4.4 chapter4/listing4.4.cpp)
add_executable(listing4.5 chapter4/listing4.5.cpp)
add_executable(listing4.6 chapter4/listing4.6.cpp)
add_executable(listing4.7 chapter4/listing4.7.cpp)
add_executable(listing4.8 chapter4/listing4.8.cpp)
add_executable(listing4.9 chapter4/listing4.9.cpp)
add_executable(listing4.10 chapter4/listing4.10.cpp)