cmake_minimum_required(VERSION 3.22)
project(prata_cpp)

set(CMAKE_CXX_STANDARD 17)
include_directories(chapter2)
add_subdirectory(chapter2)
include_directories(chapter3)
add_subdirectory(chapter3)
include_directories(chapter4)
add_subdirectory(chapter4)
include_directories(chapter5)
add_subdirectory(chapter5)