cmake_minimum_required(VERSION 3.22)
project(prata_cpp_cpt2)

set(CMAKE_CXX_STANDARD 17)

add_executable(listing2.1 listing2.1.cpp)
add_executable(listing2.2 listing2.2.cpp)
add_executable(listing2.3 listing2.3.cpp)
add_executable(listing2.4 listing2.4.cpp)
add_executable(listing2.5 listing2.5.cpp)
add_executable(listing2.6 listing2.6.cpp)

add_executable(exercise2.1 exercise2.1.cpp)
add_executable(exercise2.2 exercise2.2.cpp)
add_executable(exercise2.3 exercise2.3.cpp)
add_executable(exercise2.4 exercise2.4.cpp)
add_executable(exercise2.5 exercise2.5.cpp)
add_executable(exercise2.6 exercise2.6.cpp)
add_executable(exercise2.7 exercise2.7.cpp)
