cmake_minimum_required(VERSION 3.22)
project(prata_cpp_cpt3)

set(CMAKE_CXX_STANDARD 17)

add_executable(listing3.1 listing3.1.cpp)
add_executable(listing3.2 listing3.2.cpp)
add_executable(listing3.3 listing3.3.cpp)
add_executable(listing3.4 listing3.4.cpp)
add_executable(listing3.5 listing3.5.cpp)
add_executable(listing3.6 listing3.6.cpp)
add_executable(listing3.7 listing3.7.cpp)
add_executable(listing3.8 listing3.8.cpp)
add_executable(listing3.9 listing3.9.cpp)
add_executable(listing3.10 listing3.10.cpp)
add_executable(listing3.11 listing3.11.cpp)
add_executable(listing3.12 listing3.12.cpp)
add_executable(listing3.13 listing3.13.cpp)
add_executable(listing3.14 listing3.14.cpp)
add_executable(exercise3.1 exercise3.1.cpp)
add_executable(exercise3.2 exercise3.2.cpp)
add_executable(exercise3.3 exercise3.3.cpp)
add_executable(exercise3.4 exercise3.4.cpp)
add_executable(exercise3.5 exercise3.5.cpp)
add_executable(exercise3.6 exercise3.6.cpp)
add_executable(exercise3.7 exercise3.7.cpp)