cmake_minimum_required(VERSION 3.22)
project(prata_cpp_cpt4)

set(CMAKE_CXX_STANDARD 17)
add_executable(listing4.1 listing4.1.cpp)
add_executable(listing4.2 listing4.2.cpp)
add_executable(listing4.3 listing4.3.cpp)
add_executable(listing4.4 listing4.4.cpp)
add_executable(listing4.5 listing4.5.cpp)
add_executable(listing4.6 listing4.6.cpp)
add_executable(listing4.7 listing4.7.cpp)
add_executable(listing4.8 listing4.8.cpp)
add_executable(listing4.9 listing4.9.cpp)
add_executable(listing4.10 listing4.10.cpp)