cmake_minimum_required(VERSION 3.22)
project(prata_cpp_cpt4)

set(CMAKE_CXX_STANDARD 17)
add_executable(listing4.1 listing4.1.cpp)
add_executable(listing4.2 listing4.2.cpp)
add_executable(listing4.3 listing4.3.cpp)
add_executable(listing4.4 listing4.4.cpp)
add_executable(listing4.5 listing4.5.cpp)
add_executable(listing4.6 listing4.6.cpp)
add_executable(listing4.7 listing4.7.cpp)
add_executable(listing4.8 listing4.8.cpp)
add_executable(listing4.9 listing4.9.cpp)
add_executable(listing4.10 listing4.10.cpp)
add_executable(listing4.11 listing4.11.cpp)
add_executable(listing4.12 listing4.12.cpp)
add_executable(listing4.13 listing4.13.cpp)
add_executable(listing4.14 listing4.14.cpp)
add_executable(listing4.15 listing4.15.cpp)
add_executable(listing4.16 listing4.16.cpp)
add_executable(listing4.17 listing4.17.cpp)
add_executable(listing4.18 listing4.18.cpp)
add_executable(listing4.19 listing4.19.cpp)

add_executable(exercise4.1 exercise4.1.cpp)
add_executable(exercise4.2 exercise4.2.cpp)
add_executable(exercise4.3 exercise4.3.cpp)
add_executable(exercise4.4 exercise4.4.cpp)