cmake_minimum_required(VERSION 3.22)
project(prata_cpp_cpt5)

set(CMAKE_CXX_STANDARD 17)
add_executable(listing5.1 listing5.1.cpp)
add_executable(listing5.2 listing5.2.cpp)
add_executable(listing5.3 listing5.3.cpp)
add_executable(listing5.4 listing5.4.cpp)
add_executable(listing5.5 listing5.5.cpp)
add_executable(listing5.6 listing5.6.cpp)