cmake_minimum_required(VERSION 3.22)
project(prata_cpp_cpt5)

set(CMAKE_CXX_STANDARD 17)
add_executable(listing5.1  listing5.1.cpp)
add_executable(listing5.2  listing5.2.cpp)
add_executable(listing5.3  listing5.3.cpp)
add_executable(listing5.4  listing5.4.cpp)
add_executable(listing5.5  listing5.5.cpp)
add_executable(listing5.6  listing5.6.cpp)
add_executable(listing5.7  listing5.7.cpp)
add_executable(listing5.8  listing5.8.cpp)
add_executable(listing5.9  listing5.9.cpp)
add_executable(listing5.10 listing5.10.cpp)
add_executable(listing5.11 listing5.11.cpp)
add_executable(listing5.12 listing5.12.cpp)
add_executable(listing5.13 listing5.13.cpp)
add_executable(listing5.14 listing5.14.cpp)
add_executable(listing5.15 listing5.15.cpp)
add_executable(listing5.16 listing5.16.cpp)
add_executable(listing5.17 listing5.17.cpp)
add_executable(listing5.18 listing5.18.cpp)