cmake_minimum_required(VERSION 3.22)
project(prata_cpp_cpt6)

set(CMAKE_CXX_STANDARD 17)

add_executable(listing6.1 listing6.1.cpp)
add_executable(listing6.2 listing6.2.cpp)
add_executable(listing6.3 listing6.3.cpp)
add_executable(listing6.4 listing6.4.cpp)
add_executable(listing6.5 listing6.5.cpp)
add_executable(listing6.6 listing6.6.cpp)
add_executable(listing6.7 listing6.7.cpp)
add_executable(listing6.8 listing6.8.cpp)
add_executable(listing6.9 listing6.9.cpp)