cmake_minimum_required(VERSION 3.22)
project(prata_cpp_cpt6)

set(CMAKE_CXX_STANDARD 17)

add_executable(listing6.1 listing6.1.cpp)
add_executable(listing6.2 listing6.2.cpp)
add_executable(listing6.3 listing6.3.cpp)
add_executable(listing6.4 listing6.4.cpp)
add_executable(listing6.5 listing6.5.cpp)
add_executable(listing6.6 listing6.6.cpp)
add_executable(listing6.7 listing6.7.cpp)
add_executable(listing6.8 listing6.8.cpp)
add_executable(listing6.9 listing6.9.cpp)
add_executable(listing6.10 listing6.10.cpp)
add_executable(listing6.11 listing6.11.cpp)
add_executable(listing6.12 listing6.12.cpp)
add_executable(listing6.13 listing6.13.cpp)
add_executable(listing6.14 listing6.14.cpp)
add_executable(listing6.15 listing6.15.cpp)
add_executable(listing6.16 listing6.16.cpp)
add_executable(q6.2 q6.2.cpp)
add_executable(q6.3 q6.3.cpp)
add_executable(q6.8 q6.8.cpp)